deploy/eks/deployment_prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  #namespace: qa
  name: mobile-api
  labels:
    app: mobile-api
    purpose: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobile-api
  template:
    metadata:
      labels:
        app: mobile-api
        purpose: api
    spec:
      containers:
        - image: 826737140156.dkr.ecr.us-east-1.amazonaws.com/fanclash-mobile-api:latest
          name: mobile-api
          args: ["server"]
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /readiness
              port: 8000
            initialDelaySeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 10m

        - image: 826737140156.dkr.ecr.us-east-1.amazonaws.com/fanclash-mobile-api:latest
          name: celery-worker
          args: ["celery-worker"]
        - image: 826737140156.dkr.ecr.us-east-1.amazonaws.com/fanclash-mobile-api:latest
          name: celery-beat
          args: ["celery-beat"]
      volumes:
        - name: cloudsql-oauth-credentials
          secret:
            secretName: cloudsql-oauth-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir:
